# pcalc

./: Cargo.toml
src/: builtin.rs  context.rs  error.rs  expression.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  math.rs  parser.rs  span.rs  tests.rs  token.rs  value.rs
src/builtin/: tests.rs
src/interpreter/: tests.rs
src/lexer/: tests.rs
src/math/: context.rs  error.rs  expression.rs  tests.rs
src/parser/: tests.rs
