[package]
name = "pcalc"
version = "0.0.1"
authors = ["Jasmine Tai <jtai@jtai.ca>"]
edition = "2018"

[lib]
name = "pcalc"
path = "src/lib.rs"

[[bin]]
name = "pcalc"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.104", features = ["derive"], optional = true }
num = "0.2.1"
if_chain = "1.0.0"

[features]
with-serde = ["serde", "num/serde"]
